# dory_examples

./: .gitignore  Makefile  PlatformEnv.py  README.md  Regression test.txt  TestUtils.py  bwruntests.py  check_inputs.py  check_interm.py  check_l1_output.py  check_output.py  config_MV1.json  config_Penguinet.json  config_Residual_Connection_test_1.json  config_dronet.json  config_test.json  conftest.py  deploy_mininet.py  dims.py  flash_stim.slm  gen_mininet.py  gvsoc_basic.yml  gvsoc_basic_3x3.yml  gvsoc_basic_3x3_dw.yml  launch_regression_test.sh  launch_regression_test_pulp_sdk.sh  layer_custom_generate.py  layer_generate.py  layer_generate_Diana.py  layer_generate_TO_UPDATE.py  layer_network_generate.py  local_env.py  measure.py  network_generate.py  printf_for_debug.c  prova.json  prova.txt  random_test_generator.py  regression_test.sh  req_nemodory.txt  (+7 more)
Conv_1cl/: CMakeLists.txt
Conv_1cl/DORY_network/inc/: data.h  layerConv0.h  layerConv1.h  layerGemm2_last.h
Conv_1cl/DORY_network/src/: layerConv0.c  layerConv1.c  layerGemm2_last.c  network.c
Test_suite_DORY/MnistNet/: out_layer0.txt  out_layer4.txt
Test_suite_DORY/MobilenetV1/: out_layer0.txt  out_layer10.txt  out_layer14.txt  out_layer15.txt  out_layer17.txt  out_layer18.txt  out_layer20.txt  out_layer21.txt  out_layer23.txt  out_layer24.txt  (+3 more)
application/: Makefile
application_test/: Makefile
config_files/: config_DVS_CNN_9inputs_L2.json  config_DVS_CNN_9inputs_L3.json  config_MV1.json  config_NEMO_MV1.json  config_NEMO_NAS_Frontnet.json  config_NEMO_Penguinet_32.json  config_NEMO_Penguinet_32_L2.json  config_NEMO_Penguinet_64.json  config_NEMO_Residual_Connection_test_1.json  config_NEMO_dronet.json  config_Penguinet.json  config_Quantlab_Dronet.json  config_Quantlab_MV1_4bits.json  config_Quantlab_MV1_8bits.json  config_Quantlab_MV1_fast_xpnn.json  config_Quantlab_MV2_4bits.json  config_Quantlab_MV2_8bits.json  config_Residual_Connection_test_1.json  config_dronet.json  config_single_layer.json  config_single_layer0.json  config_single_layer1.json  config_single_layer10.json  config_single_layer11.json  config_single_layer17.json  config_single_layer2_bis.json  config_single_layer_GAP8.json  config_single_layer_analog.json  config_single_layer_digital_FC.json  config_single_layer_digital_conv.json  config_single_layer_ne16.json  config_test.json
network_tested/: MobilenetV1.txt  MobilenetV1_4bits.txt  MobilenetV2.txt  PenguiNet_32.txt  PenguiNet_64.txt  Residual_connection_test_1.txt  Residual_connection_test_2.txt  SmartAgri-net.txt  TCN_T.txt  dronet_complete.txt  dronet_no_pooling.txt  dscnn_test.txt  eegnetDW_1d_8b_1xW.txt  eegnetDW_1d_8b_Hx1.txt  eegnet_1d_8b_1xW.txt  eegnet_1d_8b_Hx1.txt
perf_measure/: .gitignore  Makefile  generate_ne16_tests.py  ne16_test.c  ne16_test.h  perf_tests.yml  pulp_minimal.c
(+1374 files in other folders)
